--- a/templates/partials/etdeucookie_dialog.html.twig
+++ b/templates/partials/etdeucookie_dialog.html.twig
@@ -3,7 +3,7 @@
 {% set etdeucookiecontent %}
     <div id="etd-cookie-wrppr">
         <div id="etd-cookie" class="text-center">
-            <div id="etd-cookie-t">{{ config.plugins.etdeucookie.message|nl2br }}</div>
+            <div id="etd-cookie-t">{{ config.plugins.etdeucookie.message|markdown }}</div>
             <div id="etd-cookie-b"><button type="button" class="btn btn-primary">{{ config.plugins.etdeucookie.button ?: ('PLUGINS.ETDEUCOOKIE.FIELDS.BUTTON.DEFAULT'|t) }}</button></div>
         </div>
     </div>
